# 5m-data-2.6-data-pipelines-orchestration

./: .gitignore  README.md  lesson.md  pre-class.md  reference.md  supabase_db_setup_hdb.md
assignment/: assignment.ipynb  assignment.md
dagster-orchestration/: pyproject.toml
dagster-orchestration/dagster_orchestration/: assets.py  definitions.py
docs/: index.html  script.js  styles.css
example-dagster-orchestration/: README.md  pyproject.toml  setup.py
example-dagster-orchestration/dagster_orchestration/: definitions.py
example-dagster-orchestration/dagster_orchestration/assets/: duck.py  pipelineone.py
meltano-ingestion/: meltano.yml
meltano-resale/: meltano.yml
resale_flat/: dbt_project.yml  profile.yml
resale_flat/models/: prices.sql  prices_by_town_type_model.sql  source.yml
