[project]
name = "dagster_orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_orchestration.definitions"
code_location_name = "dagster_orchestration"

[tool.setuptools.packages.find]
exclude=["dagster_orchestration_tests"]
